Added pass-through error codes
